a better tittle perhaps

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>#dayOne</h1>
+    <h1>One day or #dayOne? You decide.</h1>
 
     <div id="application">
       <p>It all begins <strong>here</strong> and <strong>now</strong> or it does not begin at all.</p>
