--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
       .black-button {
         background-color: black;
-        color: white;
+        color: red;
         border-style: dashed;
         border-width: 1px;
-        border-color: lightblue;
+        border-color: blue;
       }
 
       input[type="text"] {
@@ -92,9 +92,9 @@
             <tr v-bind:id="goals.length"
                 v-bind:class="{'selected': (goals.length == selectedGoalId)}">
               <td></td>
-              <td>#<input v-model.trim.lazy="newEntry" type="text" placeholder="newGoal" v-on:focus="onNewFocused"></td>
-              <td>{{ 0+" days" }}</td>
-              <td>{{ prettyDate(today) }}</td>
+              <td>#<input v-model.trim.lazy="newEntry" type="text" placeholder="oneDay" v-on:focus="onNewFocused"></td>
+              <td>--</td>
+              <td>--</td>
             </tr>
           </tbody>
         </table>
@@ -106,7 +106,7 @@
             <tr><td>{{ "#"+goals[selectedGoalId].goal }}</td></tr>
             <tr><td>{{ goals[selectedGoalId].streak+" days" }}</td></tr>
             <tr><td>{{ "since "+prettyDate(goals[selectedGoalId].started) }}</td></tr>
-            <tr><td>&nbsp;</td></tr>
+            <tr><td><p v-if="wasCheckedToday">&#10004;</p></td></tr>
             <tr><td> <button v-on:click="onCheckClick">check today</button> </td></tr>
           </table>
         </p>
