renamed main js file

--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
     </div>
 
     <script type = "text/javascript" src = "local_goals.js"></script>
-    <script type = "text/javascript" src = "app.js"></script>
+    <script type = "text/javascript" src = "dayone_app.js"></script>
   </body>
 </html>
