switched to vue for production

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>One-day or Day-one? You decide.</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://vuejs.org/js/vue.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
